hphp/test/zend/bad/ext/dom/tests/DOMDocumentFragment_appendXML_error_003.php
<?php
$document = new DOMDocument;
$root = $document->createElement('root');
$document->appendChild($root);

$fragment = $document->createDocumentFragment();
@$fragment->appendXML('<foo>is<bar>great</foo>');
$root->appendChild($fragment);
?>
